[package]

name = "nom"
version = "2.0.1"
authors = [ "contact@geoffroycouprie.com" ]
description = "A byte-oriented, zero-copy, parser combinators library"
license = "MIT"
repository = "https://github.com/Geal/nom"
readme = "README.md"
documentation = "http://rust.unhandledexpression.com/nom/"
keywords = ["parser", "parser-combinators", "parsing", "streaming", "bit"]

include = [
  "CHANGELOG.md",
  "LICENSE",
  ".gitignore",
  ".travis.yml",
  "Cargo.toml",
  "src/*.rs",
  "tests/*.rs"
]

[features]
default = ["mesalock_sgx", "std", "stream"]
mesalock_sgx = ["std","sgx_tstd"]
std = ["mesalock_sgx"]

core = []
nightly = []
regexp = ["regex"]
regexp_macros = ["regexp", "lazy_static"]
stream = []
verbose-errors = []

[dependencies]
sgx_tstd    = { rev = "v1.0.9", git = "https://github.com/baidu/rust-sgx-sdk.git", optional = true }
regex = { git = "https://github.com/mesalock-linux/regex-sgx", optional = true }
lazy_static = { version = "^0.2.2", features = ["spin_no_std"], optional = true }


#[dev-dependencies.bytes]
#git = "https://github.com/carllerche/bytes"
#rev = "a7d38e29"
